# panel-learning-aid

./: .buildinfo  .gitignore  .gitmodules  LICENSE  LICENSE.md  README.md  Untitled.html  dodo.py  environment.yml  genindex.html  learning_aid.ipynb  mortgage_app.ipynb  objects.inv  postBuild  pyproject.toml  pytest.ini  readme.html  readme.md  requirements.txt  search.html  searchindex.js
.github/workflows/: docs.yml  python-package.yml
_sources/: Untitled.ipynb
_sources/panel_aids/: readme.md
_sources/panel_aids/mortgage_calculator/: readme.md
_sources/panel_aids/panel_n_widgets/: README.md  panel_ipywidget_example.ipynb
docs/: _config.yml  _toc.yml
learning-aids/panel-learning-aid/: .gitignore  environment.yml  setup.py
learning-aids/panel-learning-aid/mortgage_calculator/: layout.py  my_logging.py
learning-aids/panel-learning-aid/mortgage_calculator/tests/: test_layout.py  test_utils.py
mortgage_calculator/: __init__.py  __main__.py  config.py  layout.py  my_logging.py  plots.py  utils.py  widgets.py
panel_aids/: __init__.py  __main__.py  readme.html
panel_aids/baby_names/: RunNames.html
panel_aids/mortgage_calculator/: __init__.py  __main__.py  index.html  index.ipynb  mortgage_calculator.html  mortgage_calculator.ipynb  readme.html  readme.md
panel_aids/mortgage_calculator/tests/: test_layout.py  test_plots.py  test_utils.py
panel_aids/panel_n_widgets/: README.html  panel_ipywidget_example.html
